# resume-builder

./: manage.py  pyproject.toml
app/: apps.py  main.py  models.py
app/api/: content.py  resume.py  resume_template.py  section.py  template.py  user.py
app/migrations/: 0001_initial.py
app/repository/: content.py  resume.py  resume_template.py  section.py  template.py  user.py
app/schemas/: base.py  content.py  resume.py  resume_template.py  section.py  template.py  user.py
core/: settings.py
tests/: test_resume.py
